public interface Renderer{
    void renderCircle(float radius);
    void renderRectangle(float width, float height);
}